--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -17,148 +17,148 @@ jobs:
         uses: actions/checkout@v3
 
       # Install Node js
-      # - name: Use Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16.10.0'
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
 
-      # # Install Dependencies
-      # - name: Install dependencies 🔧
-      #   run: |
-      #     npm i -g npm@latest
-      #     npm ci
+      # Install Dependencies
+      - name: Install dependencies 🔧
+        run: |
+          npm i -g npm@latest
+          npm ci
 
-      # # Install Semantic Release Global
-      # - name: Install Semantic Release Global
-      #   run: npm i -g semantic-release @semantic-release/git @semantic-release/changelog @semantic-release/exec
+      # Install Semantic Release Global
+      - name: Install Semantic Release Global
+        run: npm i -g semantic-release @semantic-release/git @semantic-release/changelog @semantic-release/exec
 
-      # # Run Semantic Release
-      # - name: Semantic Release
-      #   run: npx semantic-release
-      #   env:
-      #     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      #     GIT_AUTHOR_NAME: ${{secrets.AUTHOR_NAME}}
-      #     GIT_AUTHOR_EMAIL: ${{secrets.AUTHOR_EMAIL}}
-      #     GIT_COMMITTER_NAME: ${{secrets.AUTHOR_NAME}}
-      #     GIT_COMMITTER_EMAIL: ${{secrets.AUTHOR_EMAIL}}
+      # Run Semantic Release
+      - name: Semantic Release
+        run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GIT_AUTHOR_NAME: ${{secrets.AUTHOR_NAME}}
+          GIT_AUTHOR_EMAIL: ${{secrets.AUTHOR_EMAIL}}
+          GIT_COMMITTER_NAME: ${{secrets.AUTHOR_NAME}}
+          GIT_COMMITTER_EMAIL: ${{secrets.AUTHOR_EMAIL}}
 
-      # # Build application
-      # - name: Run Build
-      #   run: npm run build -- --source-map
+      # Build application
+      - name: Run Build
+        run: npm run build -- --source-map
 
-      # # Get Package.json Version
-      # - name: Get Package.json Version
-      #   id: package-version
-      #   uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
 
-      # # Create Sentry Release For Web Admin
-      # - name: Create Sentry release
-      #   uses: getsentry/action-release@v1
-      #   env:
-      #     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-      #     SENTRY_ORG: nitro-system
-      #     SENTRY_PROJECT: web-admin
-      #   with:
-      #     environment: staging
-      #     sourcemaps: ./dist/apps/w-admin
-      #     version: ${{ steps.package-version.outputs.current-version }}
-      #     ignore_empty: true
+      # Create Sentry Release For Web Admin
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: web-admin
+        with:
+          environment: staging
+          sourcemaps: ./dist/apps/w-admin
+          version: ${{ steps.package-version.outputs.current-version }}
+          ignore_empty: true
 
-      # # Create Sentry Release For Mobile Admin
-      # - name: Create Sentry release
-      #   uses: getsentry/action-release@v1
-      #   env:
-      #     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-      #     SENTRY_ORG: nitro-system
-      #     SENTRY_PROJECT: mobile-admin
-      #   with:
-      #     environment: staging
-      #     sourcemaps: ./dist/apps/m-admin
-      #     version: ${{ steps.package-version.outputs.current-version }}
-      #     ignore_empty: true
+      # Create Sentry Release For Mobile Admin
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: mobile-admin
+        with:
+          environment: staging
+          sourcemaps: ./dist/apps/m-admin
+          version: ${{ steps.package-version.outputs.current-version }}
+          ignore_empty: true
 
-      # # Create Sentry Release For Backend Api
-      # - name: Create Sentry release
-      #   uses: getsentry/action-release@v1
-      #   env:
-      #     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-      #     SENTRY_ORG: nitro-system
-      #     SENTRY_PROJECT: backend-api
-      #   with:
-      #     environment: staging
-      #     sourcemaps: ./dist/apps/b-api
-      #     version: ${{ steps.package-version.outputs.current-version }}
-      #     ignore_empty: true
+      # Create Sentry Release For Backend Api
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: backend-api
+        with:
+          environment: staging
+          sourcemaps: ./dist/apps/b-api
+          version: ${{ steps.package-version.outputs.current-version }}
+          ignore_empty: true
 
-      # # Checkout Develop
-      # - name: Checkout Develop
-      #   uses: actions/checkout@v3
-      #   with:
-      #     ref: develop
+      # Checkout Develop
+      - name: Checkout Develop
+        uses: actions/checkout@v3
+        with:
+          ref: develop
 
-      # # Pull From `Staging` to `Develop`
-      # - name: Pull From `Staging` to `Develop`
-      #   run: |
-      #     git pull origin staging
-      #     git push
+      # Pull From `Staging` to `Develop`
+      - name: Pull From `Staging` to `Develop`
+        run: |
+          git pull origin staging
+          git push
 
-      # # Get checkout
-      # - name: Checkout
-      #   uses: actions/checkout@v3
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      # # Set up Docker Buildx
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v2
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      # # Login to DockerHub
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
-      #     password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      # Login to DockerHub
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      # # Build and push Build
-      # - name: Build and push Build
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     push: true
-      #     tags: nitrosystem/staging_build:latest
-      #     target: dist
-      #     build-args: |
-      #       stage=staging
+      # Build and push Build
+      - name: Build and push Build
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/staging_build:latest
+          target: dist
+          build-args: |
+            stage=staging
 
-      # # Build and push Backend Api
-      # - name: Build and push Backend Api
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     push: true
-      #     tags: nitrosystem/staging_b_api:latest
-      #     target: backend
-      #     build-args: |
-      #       app=b-api
-      #       stage=staging
+      # Build and push Backend Api
+      - name: Build and push Backend Api
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/staging_b_api:latest
+          target: backend
+          build-args: |
+            app=b-api
+            stage=staging
 
-      # # Build and push Admin Web
-      # - name: Build and push Admin Web
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     push: true
-      #     tags: nitrosystem/staging_w_admin:latest
-      #     target: frontend
-      #     build-args: |
-      #       app=w-admin
-      #       stage=staging
+      # Build and push Admin Web
+      - name: Build and push Admin Web
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/staging_w_admin:latest
+          target: frontend
+          build-args: |
+            app=w-admin
+            stage=staging
 
-      # # Build and push Admin Mobile
-      # - name: Build and push Admin Mobile
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     push: true
-      #     tags: nitrosystem/staging_m_admin:latest
-      #     target: frontend
-      #     build-args: |
-      #       app=m-admin
-      #       stage=staging
+      # Build and push Admin Mobile
+      - name: Build and push Admin Mobile
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/staging_m_admin:latest
+          target: frontend
+          build-args: |
+            app=m-admin
+            stage=staging
 
       # Copy shell files to the server
       - name: Copy shell files to the server
@@ -168,6 +168,7 @@ jobs:
           username: ${{ secrets.DO_STAGING_USERNAME }}
           key: ${{ secrets.DO_STAGING_KEY }}
           source: 'deploy.staging.sh,docker-compose.staging.yml'
+          rm: true
           target: 'nitro'
 
       # Deploy To Staging Server
@@ -177,7 +178,6 @@ jobs:
           host: ${{ secrets.DO_STAGING_HOST }}
           username: ${{ secrets.DO_STAGING_USERNAME }}
           key: ${{ secrets.DO_STAGING_KEY }}
-          rm: true
           script: |
             cd ./nitro
             ./deploy.staging.sh
