ci(github): 💚 fix staging ci workflow

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -170,6 +170,7 @@ jobs:
           source: 'deploy.staging.sh,docker-compose.staging.yml'
           rm: true
           target: 'nitro'
+          timeout: 900000
 
       # Deploy To Staging Server
       - name: Deploy to staging server
