--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,6 +15,8 @@ jobs:
       # Get checkout
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       # Install Node js
       - name: Use Node.js
