ci(github): 💚 testing new ci commands

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -3,9 +3,9 @@ name: Sonar Cloud
 
 on:
   push:
-    branches: [develop, master, staging]
+    branches: [sd]
   pull_request:
-    branches: [develop, master, staging]
+    branches: [sd]
 
 jobs:
   sonar:
