--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
         run: |
           branchName=${GITHUB_REF#refs/heads/}
           echo "$branchName"
-          echo "DO_HOST=$(if [ $branchName = 'staging' ]; then '${{ secrets.DO_PRODUCTION_HOST }}'; else '${{ secrets.DO_STAGING_HOST }}'; fi)" >> $GITHUB_ENV
+          echo "${{ secrets.DO_PRODUCTION_HOST }}"
+          echo "DO_HOST=$(if [ $branchName = 'staging' ]; then ${{ secrets.DO_PRODUCTION_HOST }}; else ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
           echo "${{ env.DO_HOST }}"
         # echo "DO_USERNAME=$(if [ $branchName = 'staging' ]; then '${{ secrets.DO_PRODUCTION_USERNAME }}'; else '${{ secrets.DO_STAGING_USERNAME }}'; fi)" >> $GITHUB_ENV
         # echo "DO_KEY=$(if [ $branchName = 'staging' ]; then '${{ secrets.DO_PRODUCTION_KEY }}'; else '${{ secrets.DO_STAGING_KEY }}'; fi)" >> $GITHUB_ENV
