--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,9 @@ jobs:
         id: vars
         run: |
           branchName=${GITHUB_REF#refs/heads/}
+          DO_PRODUCTION_HOST=${{ secrets.DO_PRODUCTION_HOST }}
           echo "$branchName"
-          echo "${{ secrets.DO_PRODUCTION_HOST }}"
+          echo "$DO_PRODUCTION_HOST"
           echo "DO_HOST=$(if [ $branchName = 'staging' ]; then ${{ secrets.DO_PRODUCTION_HOST }}; else ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
           echo "${{ env.DO_HOST }}"
         # echo "DO_USERNAME=$(if [ $branchName = 'staging' ]; then '${{ secrets.DO_PRODUCTION_USERNAME }}'; else '${{ secrets.DO_STAGING_USERNAME }}'; fi)" >> $GITHUB_ENV
