ci(github): 💚 testing new ci commands

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         id: vars
         run: |
           branchName=${GITHUB_REF#refs/heads/}
-          DO_PRODUCTION_HOST=${{ secrets.DO_PRODUCTION_HOST }}
+          DO_PRODUCTION_HOST=${{ secrets.DO_PRODUCTION_HOST }}Hosting
           echo "$branchName"
           echo "$DO_PRODUCTION_HOST"
           echo "${{ env.DO_HOST }}"
