--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,20 +18,19 @@ jobs:
         run: |
           branchName=${GITHUB_REF#refs/heads/}
           DO_PRODUCTION_HOST=${{ secrets.DO_PRODUCTION_HOST }}
-          echo "DO_HOST=$(if [ $branchName = 'staging' ]; then echo 'hello'; else echo 'not_welcome'; fi)" >> $GITHUB_ENV
-          echo "$branchName"
-          echo "$DO_PRODUCTION_HOST"
-        # echo "DO_HOST=$(if [ $branchName = 'staging' ]; then ${{ secrets.DO_PRODUCTION_HOST }}; else ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
-        # echo "DO_USERNAME=$(if [ $branchName = 'staging' ]; then '${{ secrets.DO_PRODUCTION_USERNAME }}'; else '${{ secrets.DO_STAGING_USERNAME }}'; fi)" >> $GITHUB_ENV
-        # echo "DO_KEY=$(if [ $branchName = 'staging' ]; then '${{ secrets.DO_PRODUCTION_KEY }}'; else '${{ secrets.DO_STAGING_KEY }}'; fi)" >> $GITHUB_ENV
-        # echo "env=$(if [ $branchName = 'staging' ]; then 'staging'; else 'production'; fi)" >> $GITHUB_ENV
+          echo "DO_HOST=$(if [ $branchName = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_HOST }}; else echo ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
+          echo "DO_USERNAME=$(if [ $branchName = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_USERNAME }}; else echo ${{ secrets.DO_STAGING_USERNAME }}; fi)" >> $GITHUB_ENV
+          echo "DO_KEY=$(if [ $branchName = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_KEY }}; else echo ${{ secrets.DO_STAGING_KEY }}; fi)" >> $GITHUB_ENV
+          echo "env=$(if [ $branchName = 'staging' ]; then 'staging'; else 'production'; fi)" >> $GITHUB_ENV
 
       # Extract Variables
       - name: Extract variables
         shell: bash # cspell:ignore elif
         run: |
           echo "${{ env.DO_HOST }}"
-          echo ${{ env.DO_HOST }}
+          echo "${{ env.DO_USERNAME }}"
+          echo "${{ env.DO_KEY }}"
+          echo "${{ env.env }}"
 
   # # Run Semantic Release only on staging branch
   # semantic-release:
