ci(github): 💚 testing new ci commands

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,11 @@ jobs:
         shell: bash # cspell:ignore elif
         id: vars
         run: |
-          isStaging=${GITHUB_REF#refs/heads/} == 'staging'
-          echo "DO_HOST=$(if [ isStaging ]; then echo ${{ secrets.DO_PRODUCTION_HOST }}; else echo ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
-          echo "DO_USERNAME=$(if [ isStaging ]; then echo ${{ secrets.DO_PRODUCTION_USERNAME }}; else echo ${{ secrets.DO_STAGING_USERNAME }}; fi)" >> $GITHUB_ENV
-          echo "DO_KEY=$(if [ isStaging ]; then echo ${{ secrets.DO_PRODUCTION_KEY }}; else echo ${{ secrets.DO_STAGING_KEY }}; fi)" >> $GITHUB_ENV
-          echo "env=$(if [ isStaging ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
+          branch=${GITHUB_REF#refs/heads/}
+          echo "DO_HOST=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_HOST }}; else echo ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
+          echo "DO_USERNAME=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_USERNAME }}; else echo ${{ secrets.DO_STAGING_USERNAME }}; fi)" >> $GITHUB_ENV
+          echo "DO_KEY=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_KEY }}; else echo ${{ secrets.DO_STAGING_KEY }}; fi)" >> $GITHUB_ENV
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
 
       # Extract Variables
       - name: Extract variables
