--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,37 @@ on:
     branches: [staging, master]
 
 jobs:
+  # Deploy shell and docker-compose files and run docker compose in digital ocean
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          branch=${GITHUB_REF#refs/heads/}
+          echo "branch=branch" >> $GITHUB_ENV
+          echo "DO_HOST=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_HOST }}; else echo ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
+          echo "DO_USERNAME=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_USERNAME }}; else echo ${{ secrets.DO_STAGING_USERNAME }}; fi)" >> $GITHUB_ENV
+          echo "DO_KEY=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_KEY }}; else echo ${{ secrets.DO_STAGING_KEY }}; fi)" >> $GITHUB_ENV
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
+
+      # Extract Environments
+      - name: Output
+        shell: bash # cspell:ignore elif
+        run: |
+          echo ${{ env.branch }}
+          echo ${{ env.env }}
+          echo ${{ env.DO_USERNAME }}
+          echo ${{ env.DO_HOST }}
+          echo ${{ env.DO_KEY }}
+
   # Run Semantic Release only on staging branch
   semantic-release:
     runs-on: ubuntu-latest
@@ -223,6 +254,7 @@ jobs:
         shell: bash # cspell:ignore elif
         run: |
           branch=${GITHUB_REF#refs/heads/}
+          echo "branch=branch" >> $GITHUB_ENV
           echo "DO_HOST=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_HOST }}; else echo ${{ secrets.DO_STAGING_HOST }}; fi)" >> $GITHUB_ENV
           echo "DO_USERNAME=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_USERNAME }}; else echo ${{ secrets.DO_STAGING_USERNAME }}; fi)" >> $GITHUB_ENV
           echo "DO_KEY=$(if [ $branch = 'staging' ]; then echo ${{ secrets.DO_PRODUCTION_KEY }}; else echo ${{ secrets.DO_STAGING_KEY }}; fi)" >> $GITHUB_ENV
@@ -237,9 +269,9 @@ jobs:
       - name: Copy shell files to the server
         uses: appleboy/scp-action@master
         with:
-          host: ${{ env.DO_HOST }}
-          username: ${{ env.DO_USERNAME }}
-          key: ${{ env.DO_KEY }}
+          host: ${{ secrets.DO_STAGING_HOST }}
+          username: ${{ secrets.DO_STAGING_USERNAME }}
+          key: ${{ secrets.DO_STAGING_KEY }}
           source: 'deploy.sh,docker-compose.yml'
           rm: true
           target: 'nitro'
