--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,211 +1,211 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 # cspell:ignore buildx getsentry sourcemaps gonuit
 
-name: Deploy to master
+name: Publish a new release
 
 on:
   push:
     branches: [staging, master]
 
 jobs:
-  # # Run Semantic Release only on staging branch
-  # semantic-release:
-  #   runs-on: ubuntu-latest
-  #   if: github.ref == 'refs/heads/staging'
-  #   steps:
-  #     # Get checkout
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+  # Run Semantic Release only on staging branch
+  semantic-release:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/staging'
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-  #     # Install Node js
-  #     - name: Use Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '16.10.0'
+      # Install Node js
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
 
-  #     # Run Semantic Release
-  #     - name: Semantic Release
-  #       run: |
-  #         npm i -g semantic-release @semantic-release/git @semantic-release/changelog @semantic-release/exec
-  #         npx semantic-release
-  #       env:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #         GIT_AUTHOR_NAME: ${{secrets.AUTHOR_NAME}}
-  #         GIT_AUTHOR_EMAIL: ${{secrets.AUTHOR_EMAIL}}
-  #         GIT_COMMITTER_NAME: ${{secrets.AUTHOR_NAME}}
-  #         GIT_COMMITTER_EMAIL: ${{secrets.AUTHOR_EMAIL}}
+      # Run Semantic Release
+      - name: Semantic Release
+        run: |
+          npm i -g semantic-release @semantic-release/git @semantic-release/changelog @semantic-release/exec
+          npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GIT_AUTHOR_NAME: ${{secrets.AUTHOR_NAME}}
+          GIT_AUTHOR_EMAIL: ${{secrets.AUTHOR_EMAIL}}
+          GIT_COMMITTER_NAME: ${{secrets.AUTHOR_NAME}}
+          GIT_COMMITTER_EMAIL: ${{secrets.AUTHOR_EMAIL}}
 
-  #     # Checkout Develop
-  #     - name: Checkout Develop
-  #       uses: actions/checkout@v3
-  #       with:
-  #         ref: develop
+      # Checkout Develop
+      - name: Checkout Develop
+        uses: actions/checkout@v3
+        with:
+          ref: develop
 
-  #     # Pull From `Staging` to `Develop`
-  #     - name: Pull From `Staging` to `Develop`
-  #       run: |
-  #         git pull origin staging
-  #         git push
+      # Pull From `Staging` to `Develop`
+      - name: Pull From `Staging` to `Develop`
+        run: |
+          git pull origin staging
+          git push
 
-  # # Publish New Release To Sentry
-  # sentry:
-  #   runs-on: ubuntu-latest
-  #   needs: semantic-release
-  #   steps:
-  #     # Get checkout
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+  # Publish New Release To Sentry
+  sentry:
+    runs-on: ubuntu-latest
+    needs: semantic-release
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-  #     # Extract Environments
-  #     - name: Extract environments
-  #       shell: bash # cspell:ignore elif
-  #       run: |
-  #         branch=${GITHUB_REF#refs/heads/}
-  #         echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          branch=${GITHUB_REF#refs/heads/}
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
 
-  #     # Install Node js
-  #     - name: Use Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '16.10.0'
+      # Install Node js
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
 
-  #     # Install Dependencies
-  #     - name: Install dependencies 🔧
-  #       run: |
-  #         npm i -g npm@latest
-  #         npm ci
+      # Install Dependencies
+      - name: Install dependencies 🔧
+        run: |
+          npm i -g npm@latest
+          npm ci
 
-  #     # Build application
-  #     - name: Run Build
-  #       run: npm run build -- --source-map
+      # Build application
+      - name: Run Build
+        run: npm run build -- --source-map
 
-  #     # Get Package.json Version
-  #     - name: Get Package.json Version
-  #       id: package
-  #       uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
 
-  #     # Create Sentry Release For Web Admin
-  #     - name: Create Sentry release
-  #       uses: getsentry/action-release@v1
-  #       env:
-  #         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  #         SENTRY_ORG: nitro-system
-  #         SENTRY_PROJECT: web-admin
-  #       with:
-  #         environment: ${{ env.env }}
-  #         sourcemaps: ./dist/apps/w-admin
-  #         version: ${{ steps.package.outputs.current-version }}
-  #         ignore_empty: true
+      # Create Sentry Release For Web Admin
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: web-admin
+        with:
+          environment: ${{ env.env }}
+          sourcemaps: ./dist/apps/w-admin
+          version: ${{ steps.package.outputs.current-version }}
+          ignore_empty: true
 
-  #     # Create Sentry Release For Mobile Admin
-  #     - name: Create Sentry release
-  #       uses: getsentry/action-release@v1
-  #       env:
-  #         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  #         SENTRY_ORG: nitro-system
-  #         SENTRY_PROJECT: mobile-admin
-  #       with:
-  #         environment: ${{ env.env }}
-  #         sourcemaps: ./dist/apps/m-admin
-  #         version: ${{ steps.package.outputs.current-version }}
-  #         ignore_empty: true
+      # Create Sentry Release For Mobile Admin
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: mobile-admin
+        with:
+          environment: ${{ env.env }}
+          sourcemaps: ./dist/apps/m-admin
+          version: ${{ steps.package.outputs.current-version }}
+          ignore_empty: true
 
-  #     # Create Sentry Release For Backend Api
-  #     - name: Create Sentry release
-  #       uses: getsentry/action-release@v1
-  #       env:
-  #         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  #         SENTRY_ORG: nitro-system
-  #         SENTRY_PROJECT: backend-api
-  #       with:
-  #         environment: ${{ env.env }}
-  #         sourcemaps: ./dist/apps/b-api
-  #         version: ${{ steps.package.outputs.current-version }}
-  #         ignore_empty: true
+      # Create Sentry Release For Backend Api
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: backend-api
+        with:
+          environment: ${{ env.env }}
+          sourcemaps: ./dist/apps/b-api
+          version: ${{ steps.package.outputs.current-version }}
+          ignore_empty: true
 
-  # # Build and push images to docker hub
-  # docker:
-  #   runs-on: ubuntu-latest
-  #   needs: semantic-release
-  #   steps:
-  #     # Get checkout
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+  # Build and push images to docker hub
+  docker:
+    runs-on: ubuntu-latest
+    needs: semantic-release
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-  #     # Extract Environments
-  #     - name: Extract environments
-  #       shell: bash # cspell:ignore elif
-  #       run: |
-  #         branch=${GITHUB_REF#refs/heads/}
-  #         echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          branch=${GITHUB_REF#refs/heads/}
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
 
-  #     # Get Package.json Version
-  #     - name: Get Package.json Version
-  #       id: package
-  #       uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
 
-  #     # Set up Docker Buildx
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-  #     # Login to DockerHub
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_HUB_USERNAME }}
-  #         password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      # Login to DockerHub
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-  #     # Build and push Build
-  #     - name: Build and push Build
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/build:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: dist
-  #         build-args: |
-  #           stage=${{ env.env }}
+      # Build and push Build
+      - name: Build and push Build
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/build:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: dist
+          build-args: |
+            stage=${{ env.env }}
 
-  #     # Build and push Backend Api
-  #     - name: Build and push Backend Api
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/b_api:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: backend
-  #         build-args: |
-  #           app=b-api
-  #           stage=${{ env.env }}
-  #           version=${{ steps.package.outputs.current-version }}
+      # Build and push Backend Api
+      - name: Build and push Backend Api
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/b_api:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: backend
+          build-args: |
+            app=b-api
+            stage=${{ env.env }}
+            version=${{ steps.package.outputs.current-version }}
 
-  #     # Build and push Admin Web
-  #     - name: Build and push Admin Web
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/w_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: frontend
-  #         build-args: |
-  #           app=w-admin
-  #           stage=${{ env.env }}
-  #           version=${{ steps.package.outputs.current-version }}
+      # Build and push Admin Web
+      - name: Build and push Admin Web
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/w_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: frontend
+          build-args: |
+            app=w-admin
+            stage=${{ env.env }}
+            version=${{ steps.package.outputs.current-version }}
 
-  #     # Build and push Admin Mobile
-  #     - name: Build and push Admin Mobile
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/m_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: frontend
-  #         build-args: |
-  #           app=m-admin
-  #           stage=${{ env.env }}
-  #           version=${{ steps.package.outputs.current-version }}
+      # Build and push Admin Mobile
+      - name: Build and push Admin Mobile
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/m_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: frontend
+          build-args: |
+            app=m-admin
+            stage=${{ env.env }}
+            version=${{ steps.package.outputs.current-version }}
 
   # Deploy shell and docker-compose files and run docker compose in digital ocean
   deploy:
