ci(github): 💚 fix ci job by removing hashed lines

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -210,7 +210,7 @@ jobs:
   # Deploy shell and docker-compose files and run docker compose in digital ocean
   deploy:
     runs-on: ubuntu-latest
-    # needs: docker
+    needs: docker
     steps:
       # Get checkout
       - name: Checkout
