ci(github): 💚 update sonar version in ci/cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=nitro
 sonar.organization=nitro-system
 sonar.projectName=nitro
-sonar.projectVersion=latest
+sonar.projectVersion=123
 sonar.exclusions=android/**/*,ios/**/*
