--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -18,6 +18,18 @@ jobs:
         with:
           fetch-depth: 0
 
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          version=${{ steps.package.outputs.current-version }}
+          sed -i -e 's/$APP_VERSION/'"$version"'/g' ./sonar-project.properties
+
       # Run Sonarqube
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master # cspell:ignore sonarcloud
