fix(ci): 💚 add testing ci

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -3,9 +3,9 @@ name: Sonar Cloud
 
 on:
   push:
-    branches: [develop, master, staging]
+    branches: [ss]
   pull_request:
-    branches: [develop, master, staging]
+    branches: [ss]
 
 jobs:
   sonar:
