--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,10 +32,31 @@ jobs:
           npx semantic-release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          GIT_AUTHOR_NAME: ${{secrets.AUTHOR_NAME}}
-          GIT_AUTHOR_EMAIL: ${{secrets.AUTHOR_EMAIL}}
-          GIT_COMMITTER_NAME: ${{secrets.AUTHOR_NAME}}
-          GIT_COMMITTER_EMAIL: ${{secrets.AUTHOR_EMAIL}}
+          GIT_AUTHOR_NAME: github-actions
+          GIT_AUTHOR_EMAIL: github-actions@github.com
+          GIT_COMMITTER_NAME: github-actions
+          GIT_COMMITTER_EMAIL: github-actions@github.com
+
+      # Checkout Develop
+      - name: push changes
+        run: |
+          date > generated.txt
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add CHANGELOG.md package.json
+          git commit -m "docs(release): new release has been generated [skip ci]"
+          git push
+
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package2
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+
+      # Extract Environments
+      - name: Test
+        shell: bash # cspell:ignore elif
+        run: |
+          echo ${{ steps.package2.outputs.current-version }}
 
       # Checkout Develop
       - name: Checkout Develop
