fix(github): 💚 merge conflicts from two branches

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -3,9 +3,9 @@ name: Sonar Cloud
 
 on:
   push:
-    branches: [develop, master, staging]
+    branches: [master, staging, develop]
   pull_request:
-    branches: [develop, master, staging]
+    branches: [master, staging, develop]
 
 jobs:
   sonar:
