fix(core): 🔥 rename npm script key

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Npm Run Test
       - name: Run Test
-        run: npm run test:ci
+        run: npm run test
 
       # Build application
       - name: Run Build
