fix(sonar): 💚 fix ci sonar properties version

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=nitro
 sonar.organization=nitro-system
 sonar.projectName=nitro
-sonar.projectVersion=123
+sonar.projectVersion=$APP_VERSION
 sonar.exclusions=android/**/*,ios/**/*
