--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -8,7 +8,7 @@ on:
     branches: [develop]
 
 jobs:
-  code-quality:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -37,3 +37,66 @@ jobs:
       # Build application
       - name: Run Build
         run: npm run build
+
+  cspell:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Install Node js
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
+
+      # Run Spell Check
+      - name: Run Spell Check 🔧
+        run: |
+          npx cspell
+
+  format:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Install Node js
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
+
+      # Run Format Check
+      - name: Run Format Check 🔧
+        run: |
+          npx prettier . --check
+
+  style:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Install Node js
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
+
+      # Run Style Check
+      - name: Run Style Check 🔧
+        run: |
+          npx stylelint \"{apps,libs}/**/*.{css,less,sass,scss,sss}\"
