fix(github): 💚 fix ci bugs and issues

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -96,6 +96,12 @@ jobs:
         with:
           node-version: '16.10.0'
 
+      # Install Dependencies
+      - name: Install dependencies 🔧
+        run: |
+          npm i -g npm@latest
+          npm i stylelint stylelint-config-standard stylelint-config-prettier stylelint-config-standard-scss stylelint-config-prettier-scss stylelint-config-sass-guidelines stylelint-config-idiomatic-order -D
+
       # Run Style Check
       - name: Run Style Check 🔧
         run: |
