fix(github): 💚 fix ci bugs and issues

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -97,9 +97,10 @@ jobs:
           node-version: '16.10.0'
 
       # Install Dependencies
-      - name: Install dependencies 🔧
+
+      - name: Install dependencies 🔧 # cspell:ignore postcss
         run: |
-          npm i stylelint stylelint-config-standard stylelint-config-prettier stylelint-config-standard-scss stylelint-config-prettier-scss stylelint-config-sass-guidelines stylelint-config-idiomatic-order -g
+          npm i postcss stylelint stylelint-config-standard stylelint-config-prettier stylelint-config-standard-scss stylelint-config-prettier-scss stylelint-config-sass-guidelines stylelint-config-idiomatic-order -D
 
       # Run Style Check
       - name: Run Style Check 🔧
