fix(github): 💚 fix ci bugs and issues

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Extract environments
         shell: bash # cspell:ignore elif
         run: |
-          version=if [ $branch = 'develop' ]; then echo 'latest'; else echo ${{ steps.package.outputs.current-version }}; fi
+          version='latest'
+          if [ $branch = 'develop' ]; then version=${{ steps.package.outputs.current-version }}; fi
           sed -i -e 's/$APP_VERSION/'"$version"'/g' ./sonar-project.properties
 
       # Run Sonarqube
